I hate this shit

--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -64,11 +64,11 @@
                             <!--כאן יכול להיכנס שחקן-->
                             <div id="seat1" class="card" valign="top">
                                 <h3 style=text-align:center></h3>
-                                <p><b>type:</b></p> <!--here the user type-->
-                                <p ><b>state:</b> </p><!--here the user state-->
-                                <p ><b>chips:</b> </p><!--here the user chips-->
-                                <p><b>buys:</b> </p><!--here the user buys-->
-                                <p ><b>Hand_Won:</b> </p><!--here the user Hand_Won-->
+                                <p><b></b></p> <!--here the user type-->
+                                <p><b></b> </p><!--here the user state-->
+                                <p><b></b> </p><!--here the user chips-->
+                                <p><b></b> </p><!--here the user buys-->
+                                <p><b></b> </p><!--here the user Hand_Won-->
                             </div>
                         </td>
 
@@ -77,11 +77,11 @@
                             <!--כאן יכול להיכנס שחקן-->
                             <div id="seat2" class="card"   valign="top">
                                 <h3 style=text-align:center></h3>
-                                <p ><b>type:</b></p> <!--here the user type-->
-                                <p ><b>state:</b></p><!--here the user state-->
-                                <p ><b>chips:</b></p><!--here the user chips-->
-                                <p><b>buys:</b></p><!--here the user buys-->
-                                <p ><b>Hand_Won:</b></p><!--here the user Hand_Won-->
+                                <p ><b></b></p> <!--here the user type-->
+                                <p ><b></b></p><!--here the user state-->
+                                <p ><b></b></p><!--here the user chips-->
+                                <p><b></b></p><!--here the user buys-->
+                                <p ><b></b></p><!--here the user Hand_Won-->
 
                             </div>
 
@@ -91,11 +91,11 @@
                             <!--כאן יכול להיכנס שחקן-->
                             <div id="seat3" class="card"   valign="top">
                                 <h3 style=text-align:center></h3>
-                                <p ><b>type:</b></p> <!--here the user type-->
-                                <p ><b>state:</b></p><!--here the user state-->
-                                <p ><b>chips:</b></p><!--here the user chips-->
-                                <p><b>buys:</b> </p><!--here the user buys-->
-                                <p ><b>Hand_Won:</b> </p><!--here the user Hand_Won-->
+                                <p ><b></b></p> <!--here the user type-->
+                                <p ><b></b></p><!--here the user state-->
+                                <p ><b></b></p><!--here the user chips-->
+                                <p><b></b> </p><!--here the user buys-->
+                                <p ><b></b> </p><!--here the user Hand_Won-->
 
                             </div>
 
@@ -109,11 +109,11 @@
                             <!--כאן יכול להיכנס שחקן-->
                             <div id="seat4" class="card" valign="top" >
                                 <h3 style=text-align:center></h3>
-                                <p ><b>type:</b></p> <!--here the user type-->
-                                <p ><b>state:</b></p><!--here the user state-->
-                                <p ><b>chips:</b> </p><!--here the user chips-->
-                                <p><b>buys:</b></p><!--here the user buys-->
-                                <p ><b>Hand_Won:</b></p><!--here the user Hand_Won-->
+                                <p ><b></b></p> <!--here the user type-->
+                                <p ><b></b></p><!--here the user state-->
+                                <p ><b></b> </p><!--here the user chips-->
+                                <p><b></b></p><!--here the user buys-->
+                                <p ><b></b></p><!--here the user Hand_Won-->
 
                             </div>
 
@@ -164,11 +164,11 @@
                             <!--כאן יכול להיכנס שחקן-->
                             <div id="seat5" class="card"   valign="top">
                                 <h3 style=text-align:center></h3>
-                                <p ><b>type:</b></p> <!--here the user type-->
-                                <p ><b>state:</b></p><!--here the user state-->
-                                <p ><b>chips:</b></p><!--here the user chips-->
-                                <p><b>buys:</b></p><!--here the user buys-->
-                                <p ><b>Hand_Won:</b></p><!--here the user Hand_Won-->
+                                <p ><b></b></p> <!--here the user type-->
+                                <p ><b></b></p><!--here the user state-->
+                                <p ><b></b></p><!--here the user chips-->
+                                <p><b></b></p><!--here the user buys-->
+                                <p ><b></b></p><!--here the user Hand_Won-->
 
                             </div>
 
@@ -184,11 +184,11 @@
                             <!--כאן יכול להיכנס שחקן-->
                             <div id="seat6" class="card"   valign="top">
                                 <h3 style=text-align:center></h3>
-                                 <p ><b>type:</b></p> <!--here the user type-->
-                                <p ><b>state:</b></p><!--here the user state-->
-                                <p ><b>chips:</b></p><!--here the user chips-->
-                                <p><b>buys:</b></p><!--here the user buys-->
-                                <p ><b>Hand_Won:</b></p><!--here the user Hand_Won-->
+                                 <p ><b></b></p> <!--here the user type-->
+                                <p ><b></b></p><!--here the user state-->
+                                <p ><b></b></p><!--here the user chips-->
+                                <p><b></b></p><!--here the user buys-->
+                                <p ><b></b></p><!--here the user Hand_Won-->
 
                             </div>
 
