--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Texas Holdem Poker Room</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>Texas Holdem Poker Room</title>
         <link rel="stylesheet" href="../../common/CSS/roomCss.css">
 
 		<script type="text/javascript" src="../jquery-2.0.3.min.js"></script></head>
@@ -127,6 +129,13 @@
 
                             <div class="main">
                                 <div class="table">
+                                    <div class="popup">
+                                        <div class="popuptext" id="myPopup" >A Simple Popup!</div>
+                                    </div>
+
+                                    <!--<div class="popuptext" id="myPopup" onclick="closePopUP()">A Simple Popup!</div>-->
+
+
                                     <div class="board">
 
                                         <img id='crad1' class="card-img" src="../../common/images/cards/back.png" width="52" height="85">
@@ -135,26 +144,7 @@
                                         <img id='crad4' class="card-img" src="../../common/images/cards/back.png" width="52" height="85">
                                         <img id='crad5' class="card-img" src="../../common/images/cards/back.png" width="52" height="85">
 
-                                  <!--      <div class="card-small">
-                                        </div>-->
 
-
-                                        <!--<div class="card-small">
-                                            <p class="card-text black">10</p>&lt;!&ndash;need to change to the real card&ndash;&gt;
-                                            <p class="card-img black">&spades;</p>
-                                        </div>
-                                        <div class="card-small">
-                                            <p class="card-text red">K</p>&lt;!&ndash;need to change to the real card&ndash;&gt;
-                                            <p class="card-img red">&hearts;</p>
-                                        </div>
-                                        <div class="card-small">
-                                            <p class="card-text red">Q</p>&lt;!&ndash;need to change to the real card&ndash;&gt;
-                                            <p class="card-img red">&diams;</p>
-                                        </div>
-                                        <div class="card-small">
-                                            <p class="card-text red">2</p>&lt;!&ndash;need to change to the real card&ndash;&gt;
-                                            <p class="card-img red">&diams;</p>
-                                        </div>-->
                                     </div>
                                 </div>
                             </div>
