now we can re-run the same game

--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -46,12 +46,12 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;
                 <button id="leaveButton" type="button" onclick=LeaveRoom()>Leave room</button>
                  <br><br>
-                <input id="raiseInput" size="6" type="number" name="quantity" min="1" max="5">
+                <input id="raiseInput" size="6" type="number" name="quantity" min="1" max="5"  value="1">
                 <button id="raiseButton" type="button" disabled onclick=updateSelection('r',document.getElementById('raiseInput').value)>Raise</button>
 
                 <br><br>
 
-                <input id="betInput" size="6" type="number" name="quantity" min="1" max="5">
+                <input id="betInput" size="6" type="number" name="quantity" min="1" max="5"  value="1">
                 <button  id="betButton" disabled type="button" onclick=updateSelection('b',document.getElementById('betInput').value)>Bet</button>
             </form>
                 <br><br>
