Add chat to room

--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -56,6 +56,18 @@
             </form>
                 <br><br>
                 <label id="maxValueLabel"><b></b></label>
+
+                <div class="content">
+                    <div id="chatwindow">
+                        <h4>Chat</h4>
+                        <div id="chatarea" class="span6"></div>
+                        <form id="chatform" method="POST" action="sendChat">
+                            <input type="text" id="userstring" name="userstring"/>
+                            <input type="submit" value="Send"/>
+                        </form>
+                    </div>
+                </div>
+
                 </td>
 
 			<td  valign="top" width=50% >
