--- a/chatWebApp/web/pages/PokerLobby/lobby.html
+++ b/chatWebApp/web/pages/PokerLobby/lobby.html
@@ -20,11 +20,12 @@
             <form id="uploadForm" name="form1" method="POST" action="/upload" enctype="multipart/form-data" align="center">
                 <input type="file" name="file1" accept=".xml">
                 <input id="uploadFileButton" type="Submit" value="Upload File" disabled>
+                <button id="BuyButton" onclick=buy()>Buy$$$</button>
             </form>
             <div id="result">
             </div>
 
-            <button id="logoutButton" onclick=Logout()>Logout</button>
+            <button id="logoutButton" style="display: none;" onclick=Logout()>Logout</button>
         </td>
     </tr>
 </table>
