--- a/chatWebApp/web/pages/PokerLobby/lobby.html
+++ b/chatWebApp/web/pages/PokerLobby/lobby.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name=viewport content="width=device-width, initial-scale=1, user-scalable=yes">
     <title>Texas Holdem Poker Game</title>
     <link rel="stylesheet" href="../../common/CSS/lobbyCss.css">
     <script type="text/javascript" src="../jquery-2.0.3.min.js"></script></head>
