--- a/chatWebApp/web/pages/gameRoom/roomGameViewer.html
+++ b/chatWebApp/web/pages/gameRoom/roomGameViewer.html
@@ -81,8 +81,8 @@
 								<p class="chips"><b>chips:</b> 250</p><!--here the user chips-->
 								<p class="buys"><b>buys:</b> 3</p><!--here the user buys-->
 								<p class="Hand_Won"><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
-								<img id='player_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
-								<img id='player_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
+								<img id='player1_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
+								<img id='player1_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
                             </div>
                         </td>
 
@@ -101,8 +101,8 @@
 								<p class="chips"><b>chips:</b> 250</p><!--here the user chips-->
 								<p class="buys"><b>buys:</b> 3</p><!--here the user buys-->
 								<p class="Hand_Won"><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
-								<img id='player_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
-								<img id='player_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
+								<img id='player2_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
+								<img id='player2_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
 
                             </div>
 
@@ -122,8 +122,8 @@
 								<p class="chips"><b>chips:</b> 250</p><!--here the user chips-->
 								<p class="buys"><b>buys:</b> 3</p><!--here the user buys-->
 								<p class="Hand_Won"><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
-								<img id='player_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
-								<img id='player_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
+								<img id='player3_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
+								<img id='player3_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
 
                             </div>
 
@@ -147,8 +147,8 @@
 								<p class="chips"><b>chips:</b> 250</p><!--here the user chips-->
 								<p class="buys"><b>buys:</b> 3</p><!--here the user buys-->
 								<p class="Hand_Won"><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
-								<img id='player_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
-								<img id='player_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
+								<img id='player4_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
+								<img id='player4_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
 
 
                             </div>
@@ -198,8 +198,8 @@
 								<p class="chips"><b>chips:</b> 250</p><!--here the user chips-->
 								<p class="buys"><b>buys:</b> 3</p><!--here the user buys-->
 								<p class="Hand_Won"><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
-								<img id='player_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
-								<img id='player_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
+								<img id='player5_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
+								<img id='player5_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
 
                             </div>
 
@@ -225,8 +225,8 @@
 								<p class="chips"><b>chips:</b> 250</p><!--here the user chips-->
 								<p class="buys"><b>buys:</b> 3</p><!--here the user buys-->
 								<p class="Hand_Won"><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
-								<img id='player_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
-								<img id='player_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
+								<img id='player6_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
+								<img id='player6_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards">
 
                             </div>
 
