add viewer option

--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -6,7 +6,7 @@
 
         <title>Texas Holdem Poker Room</title>
         <link rel="stylesheet" href="../../common/CSS/roomCss.css">
-        <link rel='stylesheet' media='screen and (min-width: 701px) and (max-width: 900px)' href='css/medium.css' />
+        <!--<link rel='stylesheet' media='screen and (min-width: 701px) and (max-width: 900px)' href='css/medium.css' />-->
 		<script type="text/javascript" src="../jquery-2.0.3.min.js"></script></head>
 	<script src="../../common/context-path-helper.js"></script>
 	<script src="../../common/JS/room.js"></script>
