add viewer to room page **צריך עדיין לעדכן בצד השרת

--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -18,24 +18,42 @@
 	<table align=center width=90% border=0>
 
 		<tr >
-			<td valign="top" width=25%>
-				<h2>Player list</h2>
-					<ul id="userslist">
+			<td valign="top" width=28%>
+                <table>
+                    <tr>
+                        <td valign="top-left">
+                            <h3>Player list:</h3>
+                            <ul id="userslist">
 
-						<li>avital</li>
-						<br>
-						<li>avi</li>
-						<br>
-						<li>daniel</li>
-						<br>
-						<li>adi &nbsp;<image src="../../common/images/giphy-downsized.gif" height="25" width="25"></image></li> <!--image=my turn-->
-                        <br>
-                        <li>daniel</li>
-                        <br>
-                        <li>daniel</li>
+                                <li></li>
+                                <br>
+                                <li></li>
+                                <br>
+                                <li></li>
 
 
-					</ul>
+
+                            </ul>
+
+                        </td>
+                        <td>
+                            &nbsp;&nbsp;
+                        </td>
+                        <td valign="top">
+                            <h3>Viewers:</h3>
+
+                            <ul id="viewersPlayer">
+
+                                <li></li>
+                                <br>
+                                <li></li>
+                                <br>
+                                <li></li>
+
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
 
                 <br><br>
                 <button id="callButton" type="button" disabled onclick=updateSelection('c',0)>Call</button>
@@ -70,7 +88,7 @@
 
                 </td>
 
-			<td  valign="top" width=50% >
+			<td  valign="top" width=47% >
 
 				<table  align=center  border=0>
 					<tr>
@@ -240,8 +258,8 @@
 				</table>
                 <br><br>
                 <h3>My cards</h3>
-                <img id='player_crad1' src="../../common/images/back.png" Height="150.0" Width="100.0" class="myCards">
-                <img id='player_crad2' src="../../common/images/back.png" Height="150.0" Width="100.0" class="myCards">
+                <img id='player_crad1' src="../../common/images/back.png" Height="140.0" Width="90.0" class="myCards">
+                <img id='player_crad2' src="../../common/images/back.png" Height="140.0" Width="90.0" class="myCards">
             </td>
 
 
