add viewers to room page

--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -42,7 +42,7 @@
                         <td valign="top">
                             <h3>Viewers:</h3>
 
-                            <ul id="viewersPlayer">
+                            <ul id="viewers">
 
                                 <li></li>
                                 <br>
@@ -152,7 +152,7 @@
                         </td>
 
                         <td>
-                            &nbsp;&nbsp;<label><b>Preve Action:</b></label>&nbsp;<label><b></b></label>
+                            <!--&nbsp;&nbsp;<label><b>Preve Action:</b></label>&nbsp;<label><b></b></label>-->
                             <br><br>
                             &nbsp;&nbsp;<label><b>Pot:</b></label>&nbsp;<label id="Pot"><b></b></label>
 
