--- a/chatWebApp/web/pages/PokerLobby/lobby.html
+++ b/chatWebApp/web/pages/PokerLobby/lobby.html
@@ -25,7 +25,7 @@
             <div id="result">
             </div>
 
-            <button id="logoutButton" style="display: none;" onclick=Logout()>Logout</button>
+            <button id="logoutButton" onclick=Logout()>Logout</button>
         </td>
     </tr>
 </table>
