change the project stracture

--- a/chatWebApp/web/room.html
+++ b/chatWebApp/web/room.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 
         <title>Texas Holdem Poker Room</title>
-        <link rel="stylesheet" href="../../common/CSS/roomCss.css">
+        <link rel="stylesheet" href="common/CSS/roomCss.css">
         <!--<link rel='stylesheet' media='screen and (min-width: 701px) and (max-width: 900px)' href='css/medium.css' />-->
-		<script type="text/javascript" src="../jquery-2.0.3.min.js"></script></head>
-	<script src="../../common/context-path-helper.js"></script>
-	<script src="../../common/JS/room.js"></script>
+		<script type="text/javascript" src="jquery-2.0.3.min.js"></script></head>
+	<script src="common/context-path-helper.js"></script>
+	<script src="common/JS/room.js"></script>
 
 	</head>
 <body>
@@ -168,11 +168,11 @@
 
                                     <div class="board">
 
-                                        <img id='crad1' class="card-img" src="../../common/images/cards/back.png" width="52" height="85">
-                                        <img id='crad2' class="card-img" src="../../common/images/cards/back.png" width="52" height="85">
-                                        <img id='crad3' class="card-img" src="../../common/images/cards/back.png" width="52" height="85">
-                                        <img id='crad4' class="card-img" src="../../common/images/cards/back.png" width="52" height="85">
-                                        <img id='crad5' class="card-img" src="../../common/images/cards/back.png" width="52" height="85">
+                                        <img id='crad1' class="card-img" src="common/images/cards/back.png" width="52" height="85">
+                                        <img id='crad2' class="card-img" src="common/images/cards/back.png" width="52" height="85">
+                                        <img id='crad3' class="card-img" src="common/images/cards/back.png" width="52" height="85">
+                                        <img id='crad4' class="card-img" src="common/images/cards/back.png" width="52" height="85">
+                                        <img id='crad5' class="card-img" src="common/images/cards/back.png" width="52" height="85">
 
 
                                     </div>
@@ -258,8 +258,8 @@
 				</table>
                 <br><br>
                 <h3>My cards</h3>
-                <img id='player_crad1' src="../../common/images/back.png" Height="140.0" Width="90.0" class="myCards">
-                <img id='player_crad2' src="../../common/images/back.png" Height="140.0" Width="90.0" class="myCards">
+                <img id='player_crad1' src="common/images/back.png" Height="140.0" Width="90.0" class="myCards">
+                <img id='player_crad2' src="common/images/back.png" Height="140.0" Width="90.0" class="myCards">
             </td>
 
 
