--- a/chatWebApp/web/roomGameViewer.html
+++ b/chatWebApp/web/roomGameViewer.html
@@ -6,11 +6,11 @@
 
         
         <title>Texas Holdem Poker Room</title>
-        <link rel="stylesheet" href="../../common/CSS/roomCss.css">
+        <link rel="stylesheet" href="common/CSS/roomCss.css">
         <!--<link rel='stylesheet' media='screen and (min-width: 630px)' href='css/medium.css' />-->
-		<script type="text/javascript" src="../jquery-2.0.3.min.js"></script></head>
-	<script src="../../common/context-path-helper.js"></script>
-	<script src="../../common/JS/viewer.js"></script>
+		<script type="text/javascript" src="jquery-2.0.3.min.js"></script></head>
+	<script src="common/context-path-helper.js"></script>
+	<script src="common/JS/viewer.js"></script>
 	</head>
 <body>
 <h1 id="gameTitle">My poker game</h1><!--need to replace with the real name of the game-->
@@ -83,8 +83,8 @@
                                 <p ><b></b></p><!--here the user chips-->
                                 <p><b></b> </p><!--here the user buys-->
                                 <p ><b></b> </p><!--here the user Hand_Won-->
-								<img id='seat1_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
-								<img id='seat1_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
+								<img id='seat1_crad1' src="common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
+								<img id='seat1_crad2' src="common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
                             </div>
                         </td>
 
@@ -98,8 +98,8 @@
                                 <p ><b></b></p><!--here the user chips-->
                                 <p><b></b> </p><!--here the user buys-->
                                 <p ><b></b> </p><!--here the user Hand_Won-->
-								<img id='seat2_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
-								<img id='seat2_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
+								<img id='seat2_crad1' src="common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
+								<img id='seat2_crad2' src="common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
 
                             </div>
 
@@ -114,8 +114,8 @@
                                 <p ><b></b></p><!--here the user chips-->
                                 <p><b></b> </p><!--here the user buys-->
                                 <p ><b></b> </p><!--here the user Hand_Won-->
-								<img id='seat3_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
-								<img id='seat3_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
+								<img id='seat3_crad1' src="common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
+								<img id='seat3_crad2' src="common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
 
                             </div>
 
@@ -134,8 +134,8 @@
                                 <p ><b></b></p><!--here the user chips-->
                                 <p><b></b> </p><!--here the user buys-->
                                 <p ><b></b> </p><!--here the user Hand_Won-->
-								<img id='seat4_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
-								<img id='seat4_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
+								<img id='seat4_crad1' src="common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
+								<img id='seat4_crad2' src="common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
 
 
                             </div>
@@ -159,11 +159,11 @@
 
                                     <div class="board">
 
-                                        <img id='crad1' class="card-img" src="../../common/images/cards/back.png" width="52" height="85">
-                                        <img id='crad2' class="card-img" src="../../common/images/cards/back.png" width="52" height="85">
-                                        <img id='crad3' class="card-img" src="../../common/images/cards/back.png" width="52" height="85">
-                                        <img id='crad4' class="card-img" src="../../common/images/cards/back.png" width="52" height="85">
-                                        <img id='crad5' class="card-img" src="../../common/images/cards/back.png" width="52" height="85">
+                                        <img id='crad1' class="card-img" src="common/images/cards/back.png" width="52" height="85">
+                                        <img id='crad2' class="card-img" src="common/images/cards/back.png" width="52" height="85">
+                                        <img id='crad3' class="card-img" src="common/images/cards/back.png" width="52" height="85">
+                                        <img id='crad4' class="card-img" src="common/images/cards/back.png" width="52" height="85">
+                                        <img id='crad5' class="card-img" src="common/images/cards/back.png" width="52" height="85">
 
 
                                     </div>
@@ -180,8 +180,8 @@
                                 <p ><b></b></p><!--here the user chips-->
                                 <p><b></b> </p><!--here the user buys-->
                                 <p ><b></b> </p><!--here the user Hand_Won-->
-								<img id='seat5_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
-								<img id='seat5_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
+								<img id='seat5_crad1' src="common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
+								<img id='seat5_crad2' src="common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
 
                             </div>
 
@@ -202,8 +202,8 @@
                                 <p ><b></b></p><!--here the user chips-->
                                 <p><b></b> </p><!--here the user buys-->
                                 <p ><b></b> </p><!--here the user Hand_Won-->
-								<img id='seat6_crad1' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
-								<img id='seat6_crad2' src="../../common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
+								<img id='seat6_crad1' src="common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
+								<img id='seat6_crad2' src="common/images/back.png" Height="50.0" Width="40.0" class="myCards" >
 
                             </div>
 
