fix bug in view page

--- a/chatWebApp/web/roomGameViewer.html
+++ b/chatWebApp/web/roomGameViewer.html
@@ -143,7 +143,7 @@
                         </td>
 
                         <td>
-                            &nbsp;&nbsp;<label><b>Preve Action:</b></label>&nbsp;<label><b></b></label>
+                            &nbsp;&nbsp;<label><b>Last Action:</b></label>&nbsp;<label id="lastAction"><b></b></label>
                             <br><br>
                             &nbsp;&nbsp;<label><b>Pot:</b></label>&nbsp;<label id="Pot"><b></b></label>
 
